--- a/blog-module/angular.json
+++ b/blog-module/angular.json
@@ -18,6 +18,11 @@
         "build": {
           "builder": "@angular-devkit/build-angular:application",
           "options": {
+            "stylePreprocessorOptions": {
+              "includePaths": [
+                "src"
+              ]
+            },
             "outputPath": "dist/blog-module",
             "index": "src/index.html",
             "browser": "src/main.ts",
